[package]
name = "udping"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
rand = "0.7"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
slog = { version = "2", features = ["max_level_debug"] }
slog-term = "2"
structopt = "0.2"
time = "0.1"
